// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/Pagination/Pagination should render properly with offset -5 1`] = `
<div
  className="be-pagination"
>
  <div
    className="be-pagination-count"
  >
    <PaginationMenu
      onPageClick={[Function]}
      pageCount={5}
      pageNumber={1}
    />
  </div>
  <ButtonGroup
    className="be-pagination-nav"
  >
    <Tooltip
      isDisabled={true}
      text={
        <FormattedMessage
          defaultMessage="Previous Page"
          id="be.pagination.previousPage"
        />
      }
    >
      <Button
        isDisabled={true}
        onClick={[Function]}
      >
        <IconPageBack
          height={9}
          width={6}
        />
      </Button>
    </Tooltip>
    <Tooltip
      isDisabled={false}
      text={
        <FormattedMessage
          defaultMessage="Next Page"
          id="be.pagination.nextPage"
        />
      }
    >
      <Button
        isDisabled={false}
        onClick={[Function]}
      >
        <IconPageForward
          height={9}
          width={6}
        />
      </Button>
    </Tooltip>
  </ButtonGroup>
</div>
`;

exports[`elements/Pagination/Pagination should render properly with offset 0 1`] = `
<div
  className="be-pagination"
>
  <div
    className="be-pagination-count"
  >
    <PaginationMenu
      onPageClick={[Function]}
      pageCount={5}
      pageNumber={1}
    />
  </div>
  <ButtonGroup
    className="be-pagination-nav"
  >
    <Tooltip
      isDisabled={true}
      text={
        <FormattedMessage
          defaultMessage="Previous Page"
          id="be.pagination.previousPage"
        />
      }
    >
      <Button
        isDisabled={true}
        onClick={[Function]}
      >
        <IconPageBack
          height={9}
          width={6}
        />
      </Button>
    </Tooltip>
    <Tooltip
      isDisabled={false}
      text={
        <FormattedMessage
          defaultMessage="Next Page"
          id="be.pagination.nextPage"
        />
      }
    >
      <Button
        isDisabled={false}
        onClick={[Function]}
      >
        <IconPageForward
          height={9}
          width={6}
        />
      </Button>
    </Tooltip>
  </ButtonGroup>
</div>
`;

exports[`elements/Pagination/Pagination should render properly with offset 10 1`] = `
<div
  className="be-pagination"
>
  <div
    className="be-pagination-count"
  >
    <PaginationMenu
      onPageClick={[Function]}
      pageCount={5}
      pageNumber={1}
    />
  </div>
  <ButtonGroup
    className="be-pagination-nav"
  >
    <Tooltip
      isDisabled={true}
      text={
        <FormattedMessage
          defaultMessage="Previous Page"
          id="be.pagination.previousPage"
        />
      }
    >
      <Button
        isDisabled={true}
        onClick={[Function]}
      >
        <IconPageBack
          height={9}
          width={6}
        />
      </Button>
    </Tooltip>
    <Tooltip
      isDisabled={false}
      text={
        <FormattedMessage
          defaultMessage="Next Page"
          id="be.pagination.nextPage"
        />
      }
    >
      <Button
        isDisabled={false}
        onClick={[Function]}
      >
        <IconPageForward
          height={9}
          width={6}
        />
      </Button>
    </Tooltip>
  </ButtonGroup>
</div>
`;

exports[`elements/Pagination/Pagination should render properly with offset 20 1`] = `
<div
  className="be-pagination"
>
  <div
    className="be-pagination-count"
  >
    <PaginationMenu
      onPageClick={[Function]}
      pageCount={5}
      pageNumber={2}
    />
  </div>
  <ButtonGroup
    className="be-pagination-nav"
  >
    <Tooltip
      isDisabled={false}
      text={
        <FormattedMessage
          defaultMessage="Previous Page"
          id="be.pagination.previousPage"
        />
      }
    >
      <Button
        isDisabled={false}
        onClick={[Function]}
      >
        <IconPageBack
          height={9}
          width={6}
        />
      </Button>
    </Tooltip>
    <Tooltip
      isDisabled={false}
      text={
        <FormattedMessage
          defaultMessage="Next Page"
          id="be.pagination.nextPage"
        />
      }
    >
      <Button
        isDisabled={false}
        onClick={[Function]}
      >
        <IconPageForward
          height={9}
          width={6}
        />
      </Button>
    </Tooltip>
  </ButtonGroup>
</div>
`;

exports[`elements/Pagination/Pagination should render properly with offset 75 1`] = `
<div
  className="be-pagination"
>
  <div
    className="be-pagination-count"
  >
    <PaginationMenu
      onPageClick={[Function]}
      pageCount={5}
      pageNumber={4}
    />
  </div>
  <ButtonGroup
    className="be-pagination-nav"
  >
    <Tooltip
      isDisabled={false}
      text={
        <FormattedMessage
          defaultMessage="Previous Page"
          id="be.pagination.previousPage"
        />
      }
    >
      <Button
        isDisabled={false}
        onClick={[Function]}
      >
        <IconPageBack
          height={9}
          width={6}
        />
      </Button>
    </Tooltip>
    <Tooltip
      isDisabled={false}
      text={
        <FormattedMessage
          defaultMessage="Next Page"
          id="be.pagination.nextPage"
        />
      }
    >
      <Button
        isDisabled={false}
        onClick={[Function]}
      >
        <IconPageForward
          height={9}
          width={6}
        />
      </Button>
    </Tooltip>
  </ButtonGroup>
</div>
`;

exports[`elements/Pagination/Pagination should render properly with offset 100 1`] = `
<div
  className="be-pagination"
>
  <div
    className="be-pagination-count"
  >
    <PaginationMenu
      onPageClick={[Function]}
      pageCount={5}
      pageNumber={5}
    />
  </div>
  <ButtonGroup
    className="be-pagination-nav"
  >
    <Tooltip
      isDisabled={false}
      text={
        <FormattedMessage
          defaultMessage="Previous Page"
          id="be.pagination.previousPage"
        />
      }
    >
      <Button
        isDisabled={false}
        onClick={[Function]}
      >
        <IconPageBack
          height={9}
          width={6}
        />
      </Button>
    </Tooltip>
    <Tooltip
      isDisabled={true}
      text={
        <FormattedMessage
          defaultMessage="Next Page"
          id="be.pagination.nextPage"
        />
      }
    >
      <Button
        isDisabled={true}
        onClick={[Function]}
      >
        <IconPageForward
          height={9}
          width={6}
        />
      </Button>
    </Tooltip>
  </ButtonGroup>
</div>
`;
